manifests/hello-go-deployment-asm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go-asm
  namespace: asm
spec:
  selector:
    matchLabels:
      app: hello-go-asm
  replicas: 2 
  template:
    metadata:
      labels:
        app: hello-go-asm
    spec:
      containers:
      - name: hello-go
        image: asia.gcr.io/k8s-day/hello-go:v1
        resources:
          limits:
            cpu: "500m"
            memory: "200Mi"
          requests:
            cpu: "250m"
            memory: "100Mi"
        ports:
        - containerPort: 8080
