manifests/gclb-hc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gclb-hc-svc
  namespace: asm
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: gclb-hc
