manifests/hello-go-service-asm.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-asm
  namespace: asm
  annotations:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: hello-go-asm
