manifests/hello-go-service-asm2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-asm2
  namespace: asm2
  annotations:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: hello-go-asm2
